css/style.css
/* CUSTOM VAR */
:root {
    /* Colors */
    --gray: #1f1f1f;
    --beige: #bebcbb;
    --blue: #161c3b;
    --footer-color: #00439c;
    --btn-red: #cd3d0f;
    --btn-blue: #2d64e6;
}

/* RESET */
img {
    width: 100%;
}

a {
    color: inherit;
    text-decoration: none;
}

ul {
    list-style: none;
}

/* COMMON */
body {
    font-family: Arial, Helvetica, sans-serif;
}

.ms_container {
    width: 95%;
    max-width: 1500px;
    margin: 0 auto;
}

.ms_generic-banner {
    margin-top: 123px;
    padding-top: 20rem;
    padding-bottom: 5rem;
    background-repeat: no-repeat;
    background-position-x: center;
    background-size: cover;
    color: white;
}

main>section {
    margin-top: 3rem;
}

.ms_btn {
    padding: .7rem 1rem;
    border-radius: 50rem;
    outline-offset: -5px;
    outline-width: 2px;
}

.ms_btn:hover {
    outline-style: solid;
    transition: .1s;
}

/* card */
.card {
    border: none;
    border-radius: 0;
    background-color: transparent;
}

.card-img, .card-img-top {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.card-body {
    padding: 1rem 0;
}

/* HEADER */
header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
}

.ms_sony-header {
    background-color: black;
}

.ms_sony-header img {
    height: 1rem;
    width: auto;
    margin: 1rem;
}

header .navbar .nav-link::after {
    display: inline-block;
    content: url(../img/chevron-down-solid.svg);
    width: 0.6rem;
    margin-left: 0.4em;
    vertical-align: middle;
}

.ms_btn-dark {
    color: white;
    background-color: #363636;
}

.ms_btn-dark:hover {
    color: white;
    outline-color: white;
}

/* JUMBOTRON */
.ms_jumbotron {
    background-image: url(../img/jumbo-bg.png);
}

/* MAIN */
/* common */
.ms_btn-red {
    background-color: var(--btn-red);
}

.ms_btn-red:hover {
    color: white;
}

.ms_btn-blue {
    background-color: var(--btn-blue);
    color: white;
}

.ms_btn-blue:hover {
    color: white;
}

/* JUMBOTRON GAMES */
.jumbo-games img {
    border-radius: 1rem;
}

#active {
    outline: 4px solid var(--btn-blue);
    outline-offset: 4px;
}

.ms_go-up {
    transition: all .3s;
    transition-timing-function: ease;
}

.ms_go-up:hover {
    animation-direction:alternate;
    transform: translate(0, -20px);
    transition: all .3s;
}

/* PS5 */
#ms_ps-active {
    border-bottom: 3px solid #2687d5;
}

.ms_accessories img {
    width: 50%;
}

.ms_accessories,
#ps5-wrapper {
    text-align: center;
}

.ms_opacity-50 {
    opacity: 50%;

}

.ms_opacity-50:hover {
    opacity: 100%;
    transition: .3s;
}

.ps5-wrapper:hover {
    border-bottom: 3px solid #2687d5;
    transition: .3s;
}

/* MEGA BANNER */
.ms_jumbo-2 {
    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
}

.ms_generic-banner.ms_jumbo-2 {
    padding-top: 5rem;
}

/* NEW RELEASE */
.ms_new-release {
    color: white;
    background-color: var(--gray);
}

.ms_new-release .card-img,
.ms_new-release .card-img-top {
    border-radius: 1.5rem;
}

/* PLAYSTATION PLUS */
.playstation-plus {
    background-color: var(--beige);
}

.ms_btn-transparent {
    background-color: rgba(255, 255, 255, .5);
    color: var(--btn-blue);
}

/* PLAYSTATION NOW */
.playstation-now {
    background-color: var(--blue);
    color: white;
}

.ms_btn-white {
    background-color: white;
    color: var(--blue);
}

.ms_btn-white:hover {
    color: var(--blue);
    background-color: white;
    outline-color: var(--blue);
}

/* FOOTER */
footer {
    background-color: var(--footer-color);
    color: white;
    font-size: .8rem;
}

#play-logo-footer {
    width: 100px;
}

#globe {
    width: 20px;
}

#sony-logo-footer {
    height: 50px;
    width: auto;
}

